Use namespace "XBabyScript" to reflect that this is for X4 as well

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,7 @@
         "language": "CSharp",
         "listeners": true,
         "visitors": true,
-        "package": "XRebirthBabyScript.Compile",
+        "package": "XBabyScript.Compile",
         "outputDir": "./Compile"
     }
 }
